tests/errors/sem.expected-constant.func-sig-param.or
main :: () -> void {
    t := int;
    T := (int, t) -> void;
    T;
};
